--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-multi-key-dict (2.0.3-2) UNRELEASED; urgency=medium
+
+  * Fixed VCS URLs (https).
+
+ -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:41:51 +0100
+
 python-multi-key-dict (2.0.3-1) unstable; urgency=medium
 
   * Initial release (Closes: #806854).
