--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-multi-key-dict (2.0.3-2) UNRELEASED; urgency=medium
 
   * Fixed VCS URLs (https).
+  * d/rules: Fixed UPSTREAM_GIT.
 
  -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:41:51 +0100
 
